--- a/src/components/Expense/SingleExpense.module.css
+++ b/src/components/Expense/SingleExpense.module.css
@@ -1,48 +1,84 @@
+/* Styles for desktop */
 .listItem {
-    background: rgb(6, 6, 136);
-    color: white;
-    margin: 1rem;
-    border-radius: 2rem;
-    display: flex;
-    flex-direction: column;
-    padding: 0.5rem;
-  }
+  background: rgb(6, 6, 136);
+  color: white;
+  margin: 1rem;
+  border-radius: 2rem;
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem;
+}
+
+.listItem p {
+  margin: 0;
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+span {
+  margin-left: 1rem;
+  color: rgb(231, 131, 131);
+  font-weight: bold;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.category {
+  display: flex;
+}
+
+.btn {
+  background: rgb(214, 99, 99);
+  color: white;
+  border-style: dotted;
+ 
+  width: 5rem;
   
+ border: 2px;
+  border-radius: 1rem;
+  padding: 0.3rem;
+ 
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.btn:hover {
+  background: rgb(165, 65, 65);
+}
+
+/* Media query for mobile */
+@media (max-width: 768px) {
+  .listItem {
+      margin: 0.5rem;
+      border-radius: 1rem;
+      padding: 0.5rem;
+  }
+
   .listItem p {
-    margin: 0;
-    font-size: 1rem;
-    font-weight: 400;
+      font-size: 0.9rem;
   }
-  
+
   span {
-    margin-left: 1rem;
-    color: rgb(231, 131, 131);
-    font-weight: bold;
+      margin-left: 0.5rem;
   }
-  
+
   .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+      flex-direction: column;
+      align-items: flex-start;
   }
-  
+
   .category {
-    display: flex;
+      flex-direction: column;
   }
-  
+
   .btn {
-    background: rgb(214, 99, 99);
-    color: white;
-    border-style: none;
-    width: 5rem;
-    right: 0px;
-    margin: 0 1rem;
-    border-radius: 1rem;
-    padding: 0.2rem;
-    font-size: 1rem;
-    font-weight: 500;
+      width: 4rem;
+      margin: 0.5rem 0;
+      border-radius: 0.5rem;
+      font-size: 0.9rem;
   }
-  
-  .btn:hover {
-    background: rgb(165, 65, 65);
-  }
+}
